Sistemato jenkinsfile. Risolti code smell.